compiler/testData/diagnostics/tests/collectionLiterals/arrayLiteralsInCallsReturningAnnotations.diag.txt
/arrayLiteralsInCallsReturningAnnotations.kt:10:15: error: unsupported [Collection literals outside of annotations]
val foo = Foo(["42"])
              ^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:24:9: error: unsupported [Collection literals outside of annotations]
    Foo(["42"])
        ^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:25:9: error: unsupported [Collection literals outside of annotations]
    Foo([])
        ^^
/arrayLiteralsInCallsReturningAnnotations.kt:27:17: error: unsupported [Collection literals outside of annotations]
        val x = ["42"]
                ^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:31:16: error: unsupported [Collection literals outside of annotations]
    NestedFoo(*[NestedFoo(arr = [NestedFoo()])])
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:31:33: error: unsupported [Collection literals outside of annotations]
    NestedFoo(*[NestedFoo(arr = [NestedFoo()])])
                                ^^^^^^^^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:33:12: error: unsupported [Collection literals outside of annotations]
    IntFoo([])
           ^^
/arrayLiteralsInCallsReturningAnnotations.kt:34:12: error: unsupported [Collection literals outside of annotations]
    IntFoo([42])
           ^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:35:12: error: type mismatch: inferred type is Array<Int> but IntArray was expected
    IntFoo(run { [42] })
           ^^^^^^^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:35:18: error: unsupported [Collection literals outside of annotations]
    IntFoo(run { [42] })
                 ^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:36:12: error: type mismatch: inferred type is Array<Int> but IntArray was expected
    IntFoo(run {
           ^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:37:17: error: unsupported [Collection literals outside of annotations]
        val x = [42]
                ^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:41:27: error: unsupported [Collection literals outside of annotations]
        val x: IntArray = [42]
                          ^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:45:14: error: unsupported [Collection literals outside of annotations]
    FooAlias([])
             ^^
/arrayLiteralsInCallsReturningAnnotations.kt:46:14: error: unsupported [Collection literals outside of annotations]
    FooAlias(["42"])
             ^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:49:15: error: unsupported [Collection literals outside of annotations]
    Foo(run { [nonConst] })
              ^^^^^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:51:5: error: unsupported [Collection literals outside of annotations]
    [nonConst].returnFoo([nonConst])
    ^^^^^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:51:26: error: unsupported [Collection literals outside of annotations]
    [nonConst].returnFoo([nonConst])
                         ^^^^^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:52:5: error: not enough information to infer type variable T
    [].returnFoo([])
    ^^
/arrayLiteralsInCallsReturningAnnotations.kt:52:5: error: unsupported [Collection literals outside of annotations]
    [].returnFoo([])
    ^^
/arrayLiteralsInCallsReturningAnnotations.kt:52:18: error: unsupported [Collection literals outside of annotations]
    [].returnFoo([])
                 ^^
/arrayLiteralsInCallsReturningAnnotations.kt:54:5: error: not enough information to infer type variable T
    returnFooGeneric([])
    ^^^^^^^^^^^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:54:22: error: not enough information to infer type variable T
    returnFooGeneric([])
                     ^^
/arrayLiteralsInCallsReturningAnnotations.kt:54:22: error: unsupported [Collection literals outside of annotations]
    returnFooGeneric([])
                     ^^
/arrayLiteralsInCallsReturningAnnotations.kt:55:5: error: not enough information to infer type variable T
    returnFooGeneric([42])
    ^^^^^^^^^^^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:55:22: error: unsupported [Collection literals outside of annotations]
    returnFooGeneric([42])
                     ^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:56:5: error: not enough information to infer type variable T
    returnFooGeneric(["42"])
    ^^^^^^^^^^^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:56:22: error: unsupported [Collection literals outside of annotations]
    returnFooGeneric(["42"])
                     ^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:58:5: error: not enough information to infer type variable B
    returnTypeParam(foo, [])
    ^^^^^^^^^^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:58:26: error: not enough information to infer type variable T
    returnTypeParam(foo, [])
                         ^^
/arrayLiteralsInCallsReturningAnnotations.kt:58:26: error: unsupported [Collection literals outside of annotations]
    returnTypeParam(foo, [])
                         ^^
/arrayLiteralsInCallsReturningAnnotations.kt:59:5: error: not enough information to infer type variable B
    returnTypeParam(foo, [1, 2, 3])
    ^^^^^^^^^^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:59:26: error: unsupported [Collection literals outside of annotations]
    returnTypeParam(foo, [1, 2, 3])
                         ^^^^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:60:5: error: not enough information to infer type variable B
    returnTypeParam(foo, ["1", "2", "3"])
    ^^^^^^^^^^^^^^^
/arrayLiteralsInCallsReturningAnnotations.kt:60:26: error: unsupported [Collection literals outside of annotations]
    returnTypeParam(foo, ["1", "2", "3"])
                         ^^^^^^^^^^^^^^^

